--- a/c.html
+++ b/c.html
@@ -123,7 +123,7 @@
         <div class="unit">
             <h3>Unit 1: Introduction to C</h3>
             <a href="https://example.com" target="_blank" class="link-btn">Syllabus</a>
-            <a href="https://drive.google.com/file/d/19xMrsNJyziwHb2xS41HDJQ2fJj9T5h5l/view?usp=drive_link"
+            <a href="https://drive.google.com/file/d/19xMrsNJyziwHb2xS41HDJQ2fJj9T5h5l/view?usp=sharing"
             target="_blank"
             class="link-btn">
             Unit 1 Notes (PDF)
