--- a/index.html
+++ b/index.html
@@ -21,6 +21,35 @@
             text-align: center;
             color: white;
         }
+        
+        .top-header {
+            padding: 25px 15px;
+            color: white;
+        }
+
+        .header-content {
+            max-width: 1100px;
+            margin: auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .insta-icon {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 38px;
+            height: 38px;
+            border-radius: 50%;
+            background: linear-gradient(135deg, #f58529, #dd2a7b, #8134af);
+            box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+            transition: transform 0.2s;
+        }
+
+        .insta-icon:hover {
+            transform: scale(1.1);
+        }
 
         header h1 {
             margin: 0;
@@ -114,6 +143,10 @@
         header h1 {
             font-size: 24px;
         }
+        .header-content {
+            flex-direction: column;
+            gap: 10px;
+        }
         header p {
             font-size: 14px;
             }
@@ -149,10 +182,27 @@
 
 <body>
 
-    <header>
-        <h1>📚 College Hub</h1>
-        <p>Study Material - All in one place</p>
-    </header>
+<header class="top-header">
+    <div class="header-content">
+        <div>
+            <h1>📚 College Hub</h1>
+            <p>Study Material - All in one place</p>
+    </div>
+      <a href="https://instagram.com/kai_by_khan"
+        target="_blank"
+        class="insta-icon"
+        title="Instagram">
+    <svg xmlns="http://www.w3.org/2000/svg"
+        width="18"
+        height="18"
+        viewBox="0 0 24 24"
+        fill="white">
+        <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10 2c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3h10zm-5 3a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6zm4.5-.75a1.25 1.25 0 11-2.5 0 1.25 1.25 0 012.5 0z"/>
+    </svg>
+</a>
+    </div>
+</header>
+
 
     <div class="app">
 
@@ -168,18 +218,20 @@
         <div class="card">
             <span>📘</span>
             <strong>Mathematics</strong><br><br>
-            <a href="maths.html" class="link-btn">Click here</a>
+             <span style="opacity:0.7;">Coming Soon</span>
+            <!-- <a href="maths.html" class="link-btn">Click here</a> -->
         </div>
 
         <div class="card">
             <span>💻</span>
             <strong>Programming in C</strong><br><br>
-            <a href="c.html" class="link-btn">Click here</a>
+             <span style="opacity:0.7;">Coming Soon</span>
+            <!-- <a href="c.html" class="link-btn">Click here</a> -->
         </div>
 
         <div class="card">
             <span>🧠</span>
-            <strong>Digital Architecture</strong><br><br>
+            <strong>Computer Architecture</strong><br><br>
             <a href="arch.html" class="link-btn">Click here</a>
         </div>
     </div>
