--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </div>
         <hr style="margin: 30px 0; border: none; border-top: 1px solid #ddd;">
 
-        <h2>🎓 BCA 1st Semester</h2>
+        <h2>🎓 BCA 1st Semester (TMSL)</h2>
 
     <div class="subjects">
 
