--- a/arch.html
+++ b/arch.html
@@ -105,7 +105,7 @@
 
     <header>
         <h1>🧠 Computer Architecture</h1>
-        <p>BCA 1st Semester</p>
+        <p>BCA 1st Semester (TMSL)</p>
     </header>
 
     <div class="app">
