--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <h1>📚 College Hub</h1>
             <p>Study Material - All in one place</p>
     </div>
-      <a href="https://instagram.com/kai_by_khan"
+      <a href="https://www.instagram.com/kai_by_khan?igsh=Y2NxNnV0czYyeDZ4"
         target="_blank"
         class="insta-icon"
         title="Instagram">
