--- a/arch.html
+++ b/arch.html
@@ -119,6 +119,13 @@
         <div class="lab-section">
 
             <div class="experiment">
+                <span>Assignment front page - Download here</span>
+                <a href="https://drive.google.com/file/d/1zLPCM4l-pi4rN71s-gh5BVV2gf9GKwa7/view?usp=drive_link"
+                   target="_blank"
+                   class="link-btn">View PDF</a>
+            </div>
+
+            <div class="experiment">
                 <span>Experiment 1: Verification of the truth tables of logic gates (T2)</span>
                 <a href="https://drive.google.com/file/d/16x0aXTp5lFbt0DSH4Ihh1CsTMJ9ZlAlJ/view?usp=drive_link"
                    target="_blank"
