--- a/index.html
+++ b/index.html
@@ -216,6 +216,13 @@
     <div class="subjects">
 
         <div class="card">
+                <span>Assignment front page - Download here</span>
+                <a href="https://drive.google.com/file/d/1zLPCM4l-pi4rN71s-gh5BVV2gf9GKwa7/view?usp=drive_link"
+                   target="_blank"
+                   class="link-btn">View PDF</a>
+            </div>
+
+        <div class="card">
             <span>📘</span>
             <strong>Mathematics</strong><br><br>
              <span style="opacity:0.7;">Coming Soon</span>
