--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
     <div class="subjects">
 
         <div class="card">
-                <span>Assignment front page - Download here</span>
+                <span>📄</span>
+                <strong>Assignment FrontPage - Download here</strong><br><br>
                 <a href="https://drive.google.com/file/d/1zLPCM4l-pi4rN71s-gh5BVV2gf9GKwa7/view?usp=drive_link"
                    target="_blank"
                    class="link-btn">View PDF</a>
