--- a/index.html
+++ b/index.html
@@ -214,6 +214,14 @@
         <h2>🎓 BCA 1st Semester (TMSL)</h2>
 
     <div class="subjects">
+        
+        <div class="card">
+                <span>📜</span>
+                <strong>1ST SEMESTER SYLLABUS</strong><br><br>
+                <a href="https://drive.google.com/file/d/1hbv5EFY1cCe9Fpfre81PITzG8D5Sorch/view?usp=drive_link"
+                   target="_blank"
+                   class="link-btn">View Syllabus</a>
+            </div>
 
         <div class="card">
                 <span>📄</span>
