--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         
         <div class="card">
                 <span>📜</span>
-                <strong>BCA ALL <br>SEMESTER SYLLABUS</strong><br><br>
+                <strong>BCA 1ST <br>SEMESTER SYLLABUS</strong><br><br>
                 <a href="https://drive.google.com/file/d/1hbv5EFY1cCe9Fpfre81PITzG8D5Sorch/view?usp=drive_link"
                    target="_blank"
                    class="link-btn">View Syllabus</a>
