--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <header class="top-header">
     <div class="header-content">
         <div>
-            <h1>📚 College Hub</h1>
+            <h1>📚 College Hub <br>Techno Main Salt Lake</h1>
             <p>Study Material - All in one place</p>
     </div>
       <a href="https://www.instagram.com/kai_by_khan?igsh=Y2NxNnV0czYyeDZ4"
